--- a/events.html
+++ b/events.html
@@ -93,11 +93,11 @@
 						Come and be part of this enthralling Symposium and make it a imperishable one. Stay tuned for further updates.
 					</p>
 					<p>
-						<a class="btn btn-success" href="#"" target="_blank" role="button">Visit website &raquo;</a>
+						<a class="btn btn-success" href="https://csigitam.github.io/ethereal-2.0" target="_blank" role="button">Visit website &raquo;</a>
 					</p>
 				</div>
 				<div class="col-lg-5">
-					<img src="assets/events/2018-19/coming_soon.jpg" class="img-fluid">
+					<img src="assets/ethereal-2.0/ethereal.jpg" class="img-fluid">
 				</div>
 			</div>
 		</div>
