--- a/team.html
+++ b/team.html
@@ -173,13 +173,13 @@
                         <p>Technical Club Manager</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Likhith Nemani.jpeg" alt="Likhith Nemani" width="140" height="140">
-                        <h3>Likhith Nemani</h3>
+                        <img class="rounded-circle" src="assets/team/2019/Abhishek Anand.jpeg" alt="Abhishek Anand" width="140" height="140">
+                        <h3>Abhishek Anand</h3>
                         <p>Web Master</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Abhishek Anand.jpeg" alt="Abhishek Anand" width="140" height="140">
-                        <h3>Abhishek Anand</h3>
+                        <img class="rounded-circle" src="assets/team/2019/Likhith Nemani.jpeg" alt="Likhith Nemani" width="140" height="140">
+                        <h3>Likhith Nemani</h3>
                         <p>Web Master</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
@@ -193,18 +193,18 @@
                         <p>Logistics Head</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/suvarchala devi.jpg" alt="suvarchala Devi" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/suvarchala devi.jpeg" alt="suvarchala Devi" width="140" height="140">
                         <h3>K.Suvarchala Devi</h3>
                         <p>Head of Community Service Operations</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/2019/Abhiram Pratheek.jpg" alt="Abhiram Prateek" width="140" height="140">
-                        <h3>Abhiram Prateek</h3>
+                        <h3>Abhiram Pratheek</h3>
                         <p>Content Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/2019/Akshitha.jpg" alt="Akshitha" width="140" height="140">
-                        <h3>Akshitha</h3>
+                        <h3>Akshita</h3>
                         <p>Content Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
@@ -251,6 +251,11 @@
                         <img class="rounded-circle" src="assets/team/2019/Roshini Ragunath.jpeg" alt="Roshini Raghunath" width="140" height="140">
                         <h3>Roshini Raghunath</h3>
                         <p>PR Lead</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                            <img class="rounded-circle" src="assets/team/2019/Aashirwad Mohanty.jpeg" alt="Aashirwad Mohanty" width="140" height="140">
+                            <h3>Aashirwad Mohanty</h3>
+                            <p>PR Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/2019/Lakshmi Meghana.jpg" alt="Lakshmi Meghana" width="140" height="140">
