--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="text-center" style="color: black; font-weight: bold; font-size: 25px;">TECHNICAL AND NON-TECHNICAL EVENTS</div>
                                 <div class="text-center">Many Technical and Non-technical events are being organised and for more info about events</div>
                                 <div class="text-center">
-                                    <button class="btn btn-primary p-1 pl-3 pr-3">EVENTS</button>
+                                        <button type="button" class="btn btn-info"><a href=E:/WEB/csi-page/Ethereal2/Events.html"></a>EVENTS</button>
                                 </div>
                             </div>
                         </div>
