--- a/team.html
+++ b/team.html
@@ -38,19 +38,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gallery">Gallery</a>
+                            <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="team">Team <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="team.html">Team <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav ml-auto social-icons">
@@ -279,8 +279,9 @@
                     <div class="container">
                         <h2 class="display-3">A little something for the seniors!</h2>
                         <p>They're the ones who guides us through our journey :)</p>
+                        <a href="team-2019.html" class="btn btn-info">Check out our team from 2019! 🚀</a>
                         <a href="team-2018.html" class="btn btn-info">Check out our team from 2018! 🚀</a>
-                        <a href="team-2017.html" class="btn btn-info">Check out our team from 2017! 🚀</a>
+                        
                     </div>
                 </div>
                 <hr class="featurette-divider">
