--- a/team-2018.html
+++ b/team-2018.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-            <a class="navbar-brand" href="index">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,19 +38,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gallery">Gallery</a>
+                            <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="team">Team <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="team-2020.html">Team <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav ml-auto social-icons">
@@ -77,7 +77,7 @@
             <div class="jumbotron j-team">
                 <div class="container">
                     <h2 class="display-3">Here's our Team of 2018!</h2>
-                    <a href="team.html" class="btn btn-light text-info">View our current team!</a>    
+                    <a href="team-2020.html" class="btn btn-light text-info">View our current team!</a>    
                 </div>
             </div>
                 <div class="container marketing">
@@ -211,14 +211,7 @@
                         <p>Photography Lead</p>
                     </div>
                 </div>
-                <!-- <hr class="featurette-divider">
-                <div class="jumbotron text-info" style="background: none">
-                    <div class="container">
-                        <h2 class="display-3">A little something for the seniors!</h2>
-                        <p>They're the ones who guides us through our journey :)</p>
-                        <a href="team-2017.html" class="btn btn-info">Check out our team from 2017! 🚀</a>
-                    </div>
-                </div> -->
+                
                 <hr class="featurette-divider">
                 <div class="row featurette">
                     <div class="col-md-12">
