:memo: Cherry-pick from #15
Typos in Team Titles

--- a/team-2020.html
+++ b/team-2020.html
@@ -225,7 +225,7 @@
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/2020/hemashree.jpg" alt="Hemashree Kilari" width="140" height="140">
                         <h3>Hemashree Kilari</h3>
-                        <p>Head of Production Designer</p>
+                        <p>Head of Production Designing</p>
                         <p><a class="btn btn-info btn-lg right-icon" href="http://www.linkedin.com/in/hemashree-kilari-5818961a6" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
 
                         <p><a class="btn btn-danger btn-lg" href="mailto:121810314039@gitam.in" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
@@ -233,7 +233,7 @@
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/2020/sathya.jpg" alt="Satya Samhita" width="140" height="140">
                         <h3>Satya Samhita</h3>
-                        <p>Head of Production Designer</p>
+                        <p>Head of Production Designing</p>
                         <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/m-satya-samhita-1514b0194" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
 
                         <p><a class="btn btn-danger btn-lg" href="mailto:121810312038@gitam.in" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
