--- a/contact.html
+++ b/contact.html
@@ -101,20 +101,20 @@
                             <table class="table table-hover table-borderless">
                                 <tbody>
                                     <tr>
-                                        <td>Akhil</td>
-                                        <td><a href="tel:+917396602734">+91 73966 02734</a></td>
+                                        <td>Abhijeet/td>
+                                        <td><a href="tel:+917569838827">+91 7569838827</a></td>
                                     </tr>
                                     <tr>
-                                        <td>Shashidhar</td>
-                                        <td><a href="tel:+917330966475">+91 73309 66475</a></td>
+                                        <td>Krishna Chaitanya</td>
+                                        <td><a href="tel:+919390465129">+91 9390465129</a></td>
                                     </tr>
                                     <tr>
-                                        <td>Aditya</td>
-                                        <td><a href="tel:+919542196003">+91 95421 96003</a></td>
+                                        <td>Sri Murari</td>
+                                        <td><a href="tel:+919121916916">+91 9121916916</a></td>
                                     </tr>
                                     <tr>
-                                        <td>Harsha</td>
-                                        <td><a href="tel:+919652988096">+91 96529 88096</a></td>
+                                        <td>Jayant Gaur</td>
+                                        <td><a href="tel:+919398539651">+91 9398539651</a></td>
                                     </tr>
                                 </tbody>
                             </table>
