--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                             <table class="table table-hover table-borderless">
                                 <tbody>
                                     <tr>
-                                        <td>Abhijeet/td>
+                                        <td>Abhijeet</td>
                                         <td><a href="tel:+917569838827">+91 7569838827</a></td>
                                     </tr>
                                     <tr>
